flex/flex-tests/testData/js2_highlighting/ParametersInStatics.js2
import bbb.BBB;

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'bbb' does not correspond to file path ''">bbb</error> {
  public class <error descr="Class 'BBB' should be defined in file 'BBB.js2'">BBB</error> {
    public function set aaa(a:*):void {}
  }
}

class AAA {
  static function myfun(a:*):void {
    a = 1;
    var b;
    if (a) myfun(a)
    else myfun(b);
    BBB(a).aaa = 1;
  }

  function myfun2():void {
    var x:* = new constr();
    myfun(x)
    myfun(constr)
  }

  static var constr:Function;
}